@startuml
'https://plantuml.com/class-diagram


class Person

enum Relation{
    CHILD,
    GRANDCHILD,
    GRANDPARENT,
    PARENT,
    SIBLING
    }

class Research


class Tree
class Link

class App
Tree<..App
Person<..App
Relation<..App
Research<..App

Person<.. Link
Relation<.. Link

Relation<.. Research

Link<.. Research

Link<.. Tree
Person<.. Tree



@enduml